# securagent

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  analyze_security.py  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/secaudit-gui/: .gitignore  biome.jsonc  index.html  justfile  package.json  tsconfig.json  vite.config.ts
apps/secaudit-gui/scripts/: gui-smoke.mjs
apps/secaudit-gui/src/: App.vue  constants.ts  env.d.ts  main.ts  preview.ts  style.css  tauri.ts  types.ts
apps/secaudit-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/secaudit-gui/src-tauri/capabilities/: default.json
apps/secaudit-gui/src-tauri/icons/: icon.icns
apps/secaudit-gui/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  runtime.rs  tools.rs
apps/secaudit-gui/src/bindings/: AgentEvent.ts  AgentWorkbench.ts  CommandApprovalRequest.ts  CommandApprovalResolution.ts  ConversationPanel.ts  FindingEvidence.ts  FindingPreview.ts  FindingSeverity.ts  FindingStatus.ts  GuiContextUsage.ts  GuiMessage.ts  GuiRole.ts  GuiSessionListItem.ts  GuiTokenUsage.ts  ProjectPanel.ts  RunPanel.ts  RunPhase.ts  SkillCapability.ts  StatusPanel.ts  ToolCapability.ts  ToolParameter.ts  ToolParameterKey.ts  TraceEvent.ts  TraceEventKind.ts
apps/secaudit-gui/src/components/: CommandApprovalDialog.vue  ConversationPane.vue  OpsRail.vue  SessionRail.vue
apps/secaudit-gui/src/utils/: markdown.ts  time.ts
crates/llm-common/: Cargo.toml
crates/llm-common/src/: lib.rs
crates/secaudit-agent/: Cargo.toml
crates/secaudit-agent/src/: agent.rs  lib.rs  llm.rs  prompt.rs  session.rs  trajectory.rs
crates/secaudit-agent/src/agent/: events.rs  executor.rs  skill_tool.rs  state.rs  strategy.rs  subagent.rs
crates/secaudit-agent/src/agent/strategy/: react.rs  reflexion.rs
crates/secaudit-conversation/: Cargo.toml
crates/secaudit-conversation/src/: context_compression.rs  context_usage.rs  error.rs  lib.rs  model.rs  service.rs  sliding_window.rs  storage.rs
crates/secaudit-conversation/src/storage/: index.rs
crates/secaudit-core/: Cargo.toml
crates/secaudit-core/src/: config.rs  error.rs  lib.rs
crates/secaudit-llm/: Cargo.toml
crates/secaudit-llm/src/: lib.rs
crates/secaudit-memory/: Cargo.toml
crates/secaudit-memory/src/: error.rs  lib.rs  long_term.rs  project_memory.rs  short_term.rs
crates/secaudit-skills/: Cargo.toml
crates/secaudit-skills/src/: lib.rs  skill.rs
crates/secaudit-storage/: Cargo.toml
crates/secaudit-storage/src/: error.rs  layout.rs  lib.rs  lock.rs
crates/secaudit-tools/: Cargo.toml
crates/secaudit-tools/src/: lib.rs  tools.rs
crates/secaudit-tools/src/tools/: dependency_checker.rs  execute_command.rs  file_probe.rs  find_files.rs  list_directory.rs  nvd_lookup.rs  process.rs  read_file.rs  sandbox.rs  search_content.rs  semgrep_scanner.rs  shared.rs  write_file.rs
crates/secaudit-tools/src/tools/execute_command/: policy.rs
docs/: conversation-persistence.md
docs/contracts/: agent-evaluation-contract.md
ragrs-bridge/: Cargo.toml  justfile
ragrs-bridge/src/: main.rs
scripts/: hf_label_cwe_map.json  import_prepared_dataset.py  prepare_dataset.py  pyproject.toml  run_eval_batch.py  smoke_e2e_agent_eval.py
secaudit/: Cargo.toml  justfile
secaudit/rules/: custom-rules.toml
secaudit/src/: agent.rs  config.rs  error.rs  headless.rs  interactive.rs  llm.rs  main.rs  output.rs  prompt.rs  server.rs  tools.rs  trajectory.rs
secaudit/src/agent/: executor.rs  state.rs  strategy.rs
secaudit/src/agent/strategy/: react.rs  reflexion.rs
secaudit/src/headless/: confirm.rs  input.rs  printer.rs  response.rs  trace.rs
secaudit/src/interactive/: commands.rs  tui.rs
secaudit/src/interactive/tui/: completion.rs  event_format.rs  input.rs  layout.rs  markdown.rs  message.rs  overlay.rs  terminal.rs  timestamp.rs
secaudit/src/output/: cli.rs  report.rs
secaudit/src/tools/: code_parser.rs  cwe_knowledge_base.rs  execute_command.rs  find_files.rs  list_directory.rs  nvd_lookup.rs  pattern_scanner.rs  read_file.rs  search_content.rs  semgrep_scanner.rs  shared.rs  write_file.rs
vscode-extension/: .gitignore  .vscodeignore  README.md  justfile  package-lock.json  package.json
vscode-extension/src/: extension.ts  types.ts
vscode-extension/src/treeView/: AuditHistoryProvider.ts
vscode-extension/src/webview/: ChatViewProvider.ts  ResultPanel.ts  chatHtml.ts  resultHtml.ts
