[package]
name = "ragrs-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
ragrs = { path = "../ragrs" }
llm-common = { path = "../crates/llm-common" }
async-trait.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
