[package]
name = "secaudit"
version = "0.1.0"
edition = "2024"

[dependencies]
secaudit-agent = { path = "../crates/secaudit-agent" }
secaudit-core = { path = "../crates/secaudit-core" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
colored = "3"
crossterm = "0.29"
ratatui = "0.30"
pulldown-cmark = "0.13"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
