[package]
name = "secaudit"
version = "0.1.0"
edition = "2024"

[dependencies]
secaudit-agent = { path = "../crates/secaudit-agent" }
secaudit-conversation = { path = "../crates/secaudit-conversation" }
secaudit-core = { path = "../crates/secaudit-core" }
clap = { version = "4", features = ["derive"] }
colored = "3"
crossterm = "0.29"
ratatui = "0.30"
pulldown-cmark = "0.13"
unicode-width = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
tracing-appender.workspace = true
secaudit-storage = { path = "../crates/secaudit-storage" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
