[package]
name = "secaudit-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono = "0.4"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }
secaudit-core = { path = "../secaudit-core" }
secaudit-llm = { path = "../secaudit-llm" }
secaudit-skills = { path = "../secaudit-skills" }
secaudit-tools = { path = "../secaudit-tools" }

[lints]
workspace = true
