[package]
name = "secaudit-conversation"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
secaudit-agent = { path = "../secaudit-agent" }
secaudit-memory = { path = "../secaudit-memory" }
secaudit-storage = { path = "../secaudit-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
tiktoken = "3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
