[package]
name = "secaudit-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
