[package]
name = "secaudit-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
glob = "0.3"
regex = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
secaudit-core = { path = "../secaudit-core" }

[lints]
workspace = true
